Completo funcionamiento del proyecto

--- a/README.html
+++ b/README.html
@@ -1,1 +1,2 @@
-Para compartir nuestro repositorio
+Este es el repositorio terminado con el proyecto de mensajeria terminado
+Fue un trabajo en el que se tenia que completar un codigo semicompleto y hablar sobre su funcionamiento
